--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,30 @@
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.13
+aiosignal==1.3.2
+asgiref==3.8.1
+attrs==25.1.0
+certifi==2025.1.31
 Django==5.1.3
 django-environ==0.11.2
 djangorestframework==3.15.2
 djangorestframework-api-key==3.0.0
+drf-spectacular==0.28.0
 drf-yasg==1.21.8
 edge-tts==6.1.15
+frozenlist==1.5.0
+idna==3.10
+inflection==0.5.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+multidict==6.1.0
+packaging==24.2
+propcache==0.3.0
 psycopg2-binary==2.9.10
+pytz==2025.1
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.23.1
+sqlparse==0.5.3
+typing_extensions==4.12.2
+uritemplate==4.1.1
+yarl==1.18.3
