--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,17 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@mdi/js": "^7.4.47",
     "@ant-design/icons-vue": "7.0.1",
     "@fontsource/inter": "5.1.0",
     "@fontsource/poppins": "5.1.0",
     "@fontsource/public-sans": "5.1.1",
     "@fontsource/roboto": "5.1.0",
+    "@mdi/js": "^7.4.47",
     "@tsconfig/node20": "20.1.4",
     "@typescript-eslint/parser": "^8.18.2",
     "ant-design-vue": "4.2.6",
     "apexcharts": "4.3.0",
+    "firebase": "^11.4.0",
     "pinia": "2.3.0",
     "vee-validate": "4.15.0",
     "vite-plugin-vuetify": "2.0.4",
